crates/nirvash-macros/tests/fixtures/function_like_transition_program_invalid.stderr
error: expected `set`, `insert`, or `remove`
  --> tests/fixtures/function_like_transition_program_invalid.rs:18:13
   |
18 |             effect items <= 1;
   |             ^^^^^^
